--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "",
   "main": "gulpfile.js",
   "dependencies": {
+    "bourbon": "^4.2.6",
     "gulp-sass": "~2.1.0"
   },
   "devDependencies": {
+    "bourbon": "^4.2.6",
+    "eyeglass": "^0.7.1",
     "gulp": "^3.9.0",
+    "gulp-livereload": "^3.8.1",
     "gulp-sass": "^2.1.0"
   },
   "scripts": {
