--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "bourbon": "^4.2.6",
     "eyeglass": "^0.7.1",
     "gulp": "^3.9.0",
+    "gulp-concat-css": "^2.2.0",
+    "gulp-jade": "^1.1.0",
     "gulp-livereload": "^3.8.1",
-    "gulp-sass": "^2.1.0"
+    "gulp-sass": "^2.1.0",
+    "gulp-sourcemaps": "^1.6.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
